# ForestFormer3D

./: ._raw  .dockerignore  .gitignore  Dockerfile  PAPER.TXT  README.md  README2.md  package-lock.json  package.json  readme.md  readme_original.md
MinkowskiEngine.egg-info/: PKG-INFO
__MACOSX/: ._segmented_trees.crop.test.las
baselines/: tree_crowns.dbf  tree_crowns.shx
baselines/watershed/: main.py  pyproject.toml  watershed.py
baselines/watershed/scripts/: prepare_ff3d_gt.sh
configs/: cass_pretrained_seminst.py  ff3d_inst_only_xyz.py  ff3d_inst_only_xyz_cass.py  ff3d_inst_only_xyz_combined.py  ff3d_inst_only_xyz_rgb_i.py  ff3d_inst_only_xyz_rgb_i_cass.py  ff3d_inst_only_xyz_rgb_i_combined.py  ff3d_pretrained_xyz_seminst.py  oneformer3d_qs_radius16_qp300_2many_cass.py  pretrained.py  xyz.py  xyzrgb.py
configs/original/: oneformer3d_qs_radius16_qp300_2many.py
oneformer3d/: __init__.py  instance_criterion.py  instance_only_metric.py  oneformer3d.py  oneformer3d_speedup_v1.py  transforms_3d.py  unified_metric.py
tools/: __init__.py  converter_forainetv2_rgb.py  copy_predictions.py  create_data_forainetv2_rgb.py  fix_spconv_checkpoint.py  forainetv2_data_utils.py  forainetv2_data_utils_rgb.py  merge_prediction.py  merge_prediction_slow.py  package_training_data.sh  run_cass_pipeline.sh  run_prep  update_infos_to_v2.py
tools/datasets/: __init__.py  assign_tree_id_from_shp.py  batch_load_ForAINetV2_data.py  batch_load_ForAINetV2_data_rgb.py  las_to_ply.py  parse_ply.py  (+6 more)
watershed/: build_shared_surfaces.py  shared_surfaces.py  snake_refine.py  watershed.py
(+19 files in other folders)
