[project]
name = "watershed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fiona>=1.10.1",
    "laspy>=2.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "rasterio>=1.5.0",
    "scikit-image>=0.26.0",
    "shapely>=2.0.0",
    "tqdm>=4.66.0",
]
